updated some font styling and nav links, testing on github page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/style.css">
+        <base href="https://navelfuzz.github.io/" target="_blank">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -25,10 +26,10 @@
         <div class="navContainer">
         <nav>
             <ul>
-                <li>instructions</li>
-                <li>projects</li>
-                <li>learning</li>
-                <li>planning</li>
+                <li><a href="instructions/">Instructions</a></li>
+                <li><a href="projects/">Projects</a></li>
+                <li><a href="learning/">Learning</a></li>
+                <li><a href="planning/">Planning</a></li>
             </ul>
         </nav>
         </div>
