updated the Index with a TOC for the projects

--- a/index.html
+++ b/index.html
@@ -34,20 +34,45 @@
         <main>
             <div>
                 <section>
-                    <h2>instructions</h2>
+                    <h3>instructions</h3>
                     <p>this repository is a saved repository of useful notes/instrucitons of practical skills that may often be called upon but just as often forgotten.</p>
                 </section>
                 <section>
-                    <h2>projects</h2>
+                    <h3>projects</h3>
                     <p>this repository and it's sub=directories are an organized catalog of ongoing projects.</p>
                 </section>
                 <section>
-                    <h2>learning</h2>
+                    <h3>learning</h3>
                     <p>this repository is used for basic learning projects and notes while reading/learning new material</p>
                 </section>
                 <section>
-                    <h2>planning</h2>
+                    <h3>planning</h3>
                     <p>this private repository is for storage of planning notes that may contain personal information not to be shared publicly</p>
+                </section>
+            </div>
+            <div>
+                <h2>Projects Repo TOC</h2>
+                <section>
+                    ├── index.html<br>
+                    ├── <a href="/README.md">README.md</a><br>
+                    ├── cpp<br>
+                    │   └── <a href="/cpp/README.md">README.md</a><br>
+                    ├── css<br>
+                    │   └── style.css<br>
+                    ├── devTools<br>
+                    │   ├── <a href="/devTools/README.md">README.md</a><br>
+                    │   └── homeLab<br>
+                    │       └── <a href="/devTools/homeLab/README.md">README.md</a><br>
+                    ├── java<br>
+                    │   └── <a href="/java/README.md">README.md</a><br>
+                    ├── javascript<br>
+                    │   └── <a href="/javascript/README.md">README.md</a><br>
+                    ├── mobile<br>
+                    │   └── <a href="/mobile/README.md">README.md</a><br>
+                    ├── python<br>
+                    │   └── <a href="/python/README.md">README.md</a><br>
+                    └── web<br>
+                        └── <a href="/web/README.md">README.md</a><br>
                 </section>
             </div>               
         </main>      
