added footer information to index page

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <footer>
             <p>Author: Navelfuzz aka Jonathon Stillson</p>
             <p>Created 30OCT2023</p>
+            <p>Updated 30OCT2023</p>
         </footer>
     </body>
 </html>
