fixing link to readme file

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2>Projects Repo TOC</h2>
                 <section>
                     ├── index.html<br>
-                    ├── <a href="/README.md">README.md</a><br>
+                    ├── <a href="projects/README.md">README.md</a><br>
                     ├── cpp<br>
                     │   └── <a href="/cpp/README.md">README.md</a><br>
                     ├── css<br>
