fixed all toc links on the index page

--- a/index.html
+++ b/index.html
@@ -56,23 +56,23 @@
                     ├── index.html<br>
                     ├── <a href="projects/README.md">README.md</a><br>
                     ├── cpp<br>
-                    │   └── <a href="/cpp/README.md">README.md</a><br>
+                    │   └── <a href="projects/cpp/README.md">README.md</a><br>
                     ├── css<br>
                     │   └── style.css<br>
                     ├── devTools<br>
-                    │   ├── <a href="/devTools/README.md">README.md</a><br>
+                    │   ├── <a href="projects/devTools/README.md">README.md</a><br>
                     │   └── homeLab<br>
-                    │       └── <a href="/devTools/homeLab/README.md">README.md</a><br>
+                    │       └── <a href="projects/devTools/homeLab/README.md">README.md</a><br>
                     ├── java<br>
-                    │   └── <a href="/java/README.md">README.md</a><br>
+                    │   └── <a href="projects/java/README.md">README.md</a><br>
                     ├── javascript<br>
-                    │   └── <a href="/javascript/README.md">README.md</a><br>
+                    │   └── <a href="projects/javascript/README.md">README.md</a><br>
                     ├── mobile<br>
-                    │   └── <a href="/mobile/README.md">README.md</a><br>
+                    │   └── <a href="projects/mobile/README.md">README.md</a><br>
                     ├── python<br>
-                    │   └── <a href="/python/README.md">README.md</a><br>
+                    │   └── <a href="projects/python/README.md">README.md</a><br>
                     └── web<br>
-                        └── <a href="/web/README.md">README.md</a><br>
+                        └── <a href="projects/web/README.md">README.md</a><br>
                 </section>
             </div>               
         </main>      
