updated index linking throughout pages/repos

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/style.css">
-        <base href="https://navelfuzz.github.io/" target="_blank">
+        <base href="https://navelfuzz.github.io/">
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -54,25 +54,25 @@
                 <h2>Projects Repo TOC</h2>
                 <section>
                     ├── index.html<br>
-                    ├── <a href="projects/README.md">README.md</a><br>
+                    ├── <a href="/projects/README.md">README.md</a><br>
                     ├── cpp<br>
-                    │   └── <a href="projects/cpp/README.md">README.md</a><br>
+                    │   └── <a href="/projects/cpp/contents.md">contents.md</a><br>
                     ├── css<br>
                     │   └── style.css<br>
                     ├── devTools<br>
-                    │   ├── <a href="projects/devTools/README.md">README.md</a><br>
+                    │   ├── <a href="/projects/devTools/contents.md">contents.md</a><br>
                     │   └── homeLab<br>
-                    │       └── <a href="projects/devTools/homeLab/README.md">README.md</a><br>
+                    │       └── <a href="/projects/devTools/homeLab/contents.md">contents.md</a><br>
                     ├── java<br>
-                    │   └── <a href="projects/java/README.md">README.md</a><br>
+                    │   └── <a href="/projects/java/contents.md">contents.md</a><br>
                     ├── javascript<br>
-                    │   └── <a href="projects/javascript/README.md">README.md</a><br>
+                    │   └── <a href="/projects/javascript/contents.md">contents.md</a><br>
                     ├── mobile<br>
-                    │   └── <a href="projects/mobile/README.md">README.md</a><br>
+                    │   └── <a href="/projects/mobile/contents.md">contents.md</a><br>
                     ├── python<br>
-                    │   └── <a href="projects/python/README.md">README.md</a><br>
+                    │   └── <a href="/projects/python/contents.md">contents.md</a><br>
                     └── web<br>
-                        └── <a href="projects/web/README.md">README.md</a><br>
+                        └── <a href="/projects/web/contents.md">contents.md</a><br>
                 </section>
             </div>               
         </main>      
